[gd_scene load_steps=24 format=3 uid="uid://2ulhdxvq2l1p"]

[ext_resource type="Script" path="res://game.gd" id="1_qart5"]
[ext_resource type="PackedScene" uid="uid://ck16vkvk68bm7" path="res://pickups/pickup.tscn" id="2_iaxst"]
[ext_resource type="PackedScene" uid="uid://xbg4xjp5kror" path="res://planets/planet.tscn" id="3_8jt20"]
[ext_resource type="Material" uid="uid://cq7li7gpthr8o" path="res://planets/earth/earth_material.tres" id="4_aw3lj"]
[ext_resource type="Script" path="res://camera_controller.gd" id="5_x5dlx"]
[ext_resource type="PackedScene" uid="uid://cvqo78bsoj4kl" path="res://ship.tscn" id="6_jpb2v"]
[ext_resource type="Material" uid="uid://dtv2ncb4r8xvs" path="res://planets/moon/moon_material.tres" id="7_ucscd"]
[ext_resource type="Script" path="res://starfield.gd" id="8_ut6kx"]
[ext_resource type="SphereMesh" uid="uid://d3c0a7iso6h4f" path="res://star.tres" id="9_0wgbm"]

[sub_resource type="CameraEffects" id="CameraEffects_oycn5"]
override_exposure_enabled = true

[sub_resource type="Curve3D" id="Curve3D_rvji6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xkejh"]

[sub_resource type="Sky" id="Sky_uiemh"]
sky_material = SubResource( "ShaderMaterial_xkejh" )

[sub_resource type="Environment" id="Environment_umux7"]
background_mode = 1
background_color = Color(0.105882, 0, 0.196078, 1)
sky = SubResource( "Sky_uiemh" )
glow_enabled = true
glow_normalized = true
glow_intensity = 8.0
glow_bloom = 0.14

[sub_resource type="BoxShape3D" id="BoxShape3D_ixp1q"]
size = Vector3(100, 100, 7.337)

[sub_resource type="BoxShape3D" id="BoxShape3D_8ym76"]
size = Vector3(250, 250, 54.5556)

[sub_resource type="BoxShape3D" id="BoxShape3D_j5r62"]
size = Vector3(554.808, 521.392, 41.1946)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yebu2"]
diffuse_mode = 3
specular_mode = 2
albedo_color = Color(0.454902, 0.454902, 0.454902, 1)
roughness = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_vi7fp"]
material = SubResource( "StandardMaterial3D_yebu2" )
radius = 0.1
height = 0.2
radial_segments = 16
rings = 8

[sub_resource type="Curve" id="Curve_4o6b2"]
max_value = 30.0
_data = [Vector2(0.404639, 0), 0.0, 0.0, 0, 0, Vector2(1, 14.7297), 0.0, 0.0, 0, 0]

[sub_resource type="Curve" id="Curve_35228"]
_data = [Vector2(0, 0.558559), 0.0, 0.0, 0, 0, Vector2(0.384021, 0.63964), 0.0, 0.0, 0, 0, Vector2(0.744845, 0.801802), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]

[sub_resource type="Animation" id="Animation_olby1"]
resource_name = "IntroToStandard"
length = 4.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, 0.15, -0.25, 0, 0.25, 0, 1),
"times": PackedFloat32Array(0, 4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0, 1, 1.104, -0.25, 0, 0.25, 0, 1),
"times": PackedFloat32Array(0, 4)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"points": PackedFloat32Array(-0.0766464, -0.25, 0, 0.25, 0, 1, 0, -0.25, 0, 0.25, 0, 1),
"times": PackedFloat32Array(0, 4)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"points": PackedFloat32Array(0.645162, -0.25, 0, 0.25, 0, 1, 0, -0.25, 0, 0.25, 0, 1),
"times": PackedFloat32Array(0, 4)
}

[sub_resource type="Animation" id="Animation_1udlt"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"points": PackedFloat32Array(2, -0.25, 0, 0.25, 0, 1),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"points": PackedFloat32Array(-0.0766464, -0.25, 0, 0.25, 0, 1),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"points": PackedFloat32Array(-1.4694, -0.25, 0, 0.25, 0, 1),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:rotation:z")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"points": PackedFloat32Array(0.645162, -0.25, 0, 0.25, 0, 1),
"times": PackedFloat32Array(0)
}

[node name="Game" type="Node"]
process_mode = 1
script = ExtResource( "1_qart5" )
pickup_scene = ExtResource( "2_iaxst" )

[node name="Earth" parent="." instance=ExtResource( "3_8jt20" )]
transform = Transform3D(0.25337, -2.92063e-06, -1.98389, 1.19913, 1.59331, 0.153143, 1.58048, -1.20886, 0.201851, 2.46459, -3.29967, 0)
rotation_speed = 0.0
radius = 2.0
material = ExtResource( "4_aw3lj" )
mass = 1.5

[node name="CameraController" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.72725, 0.438848, 5.87647)
effects = SubResource( "CameraEffects_oycn5" )
fov = 50.0
size = 6.41
script = ExtResource( "5_x5dlx" )
enabled = false
margin = 0.671

[node name="Sun" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.603, 8.41744, 9.64028)
light_energy = 18.0
omni_range = 1000.0

[node name="Ship" parent="." instance=ExtResource( "6_jpb2v" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.42312, -0.936763, 0)
gravity_pow = 1.3

[node name="Moon" parent="." instance=ExtResource( "3_8jt20" )]
transform = Transform3D(0.42, 0, 0, 0, 0.42, 0, 0, 0, 0.42, -2.08171, 1.81569, 0)
radius = 0.42
material = ExtResource( "7_ucscd" )

[node name="ShipPath" type="Path3D" parent="."]
curve = SubResource( "Curve3D_rvji6" )

[node name="ShipPathFollow" type="PathFollow3D" parent="ShipPath"]
cubic_interp = false
loop = false

[node name="Pickups" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( "Environment_umux7" )

[node name="Starfield" type="Node3D" parent="."]
script = ExtResource( "8_ut6kx" )
near_stars = 500
mid_stars = 1000
far_stars = 5000
star_seed = 2
mesh = ExtResource( "9_0wgbm" )

[node name="Example" type="Node3D" parent="Starfield"]

[node name="ExampleStar" type="MeshInstance3D" parent="Starfield/Example"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.20032, -9.80873)
mesh = ExtResource( "9_0wgbm" )
skeleton = NodePath("../..")

[node name="Area" type="Area3D" parent="Starfield"]

[node name="Near" type="CollisionShape3D" parent="Starfield/Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12.1632)
shape = SubResource( "BoxShape3D_ixp1q" )

[node name="Mid" type="CollisionShape3D" parent="Starfield/Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50.1024)
shape = SubResource( "BoxShape3D_8ym76" )

[node name="Far" type="CollisionShape3D" parent="Starfield/Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -109.871)
shape = SubResource( "BoxShape3D_j5r62" )

[node name="BackLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.4517, -8.64024, -10.642)
light_color = Color(0, 0.0862745, 0.72549, 1)
light_energy = 1.96
light_size = 0.1
light_specular = 0.0
omni_range = 231.851

[node name="ShipSmoke" type="CPUParticles3D" parent="."]
transform = Transform3D(0, 1, 0, -1, 0, 0, 0, 0, 1, 0, 1.68447, 0)
emitting = false
amount = 80
lifetime = 0.57
lifetime_randomness = 0.57
mesh = SubResource( "SphereMesh_vi7fp" )
emission_shape = 5
emission_points = PackedVector3Array(0, 0, 0)
emission_normals = PackedVector3Array(0, -1, 0)
spread = 12.78
gravity = Vector3(0, 0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 2.38
linear_accel_min = -4.0
linear_accel_max = -4.0
damping_curve = SubResource( "Curve_4o6b2" )
scale_amount_curve = SubResource( "Curve_35228" )

[node name="InitialPickup" parent="." instance=ExtResource( "2_iaxst" )]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 2.47491, 1.55157, 0)

[node name="EarthAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Earth")
anims/IntroToStandard = SubResource( "Animation_olby1" )
anims/RESET = SubResource( "Animation_1udlt" )

[connection signal="picked_up" from="InitialPickup" to="." method="_on_initial_pickup_picked_up"]
